# pkgbuilds

./: README.md
calamares/: Makefile  PKGBUILD  cleanup.sh  dep.sh
calamares/calamares-3.2.26-1/: PKGBUILD
calamares/calamares-3.2.39/: PKGBUILD  PKGBUILD.bak  dep.sh
calamares/calamares-3.2.45/: dep.sh
calculator/: MainWindow.cpp  PKGBUILD  README.md  calculator.desktop
filer-dock/: PKGBUILD
filer-dock-panel-containment/: PKGBUILD
firefox-settings/: PKGBUILD  cleanup.sh
grub/: Makefile  PKGBUILD  grub.install
kscreenlocker/: CMakeLists.txt  Makefile  PKGBUILD  README.md  kde.pam  kscreenlocker.install  pearos-lockscreen.install
neofetch/: PKGBUILD
pear-appstore/: CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md  TODO.md  build.sh
pear-appstore/assets/: pearos-appstore.desktop  sidebar_icons.qrc
pear-appstore/frontend/: index.html
pear-appstore/pearID/: login_and_sync.sh
pear-appstore/src/: main.cpp
pear-appstore/src/core/: alpm_wrapper.cpp  alpm_wrapper.h  appstream_helper.cpp  appstream_helper.h  aur_helper.cpp  aur_helper.h  package_manager.cpp  package_manager.h
pear-appstore/src/gui/: category_widget.cpp  category_widget.h  home_widget.cpp  home_widget.h  installed_widget.cpp  installed_widget.h  loading_overlay.cpp  loading_overlay.h  mainwindow.cpp  mainwindow.h  package_card.cpp  package_card.h  package_details_dialog.cpp  package_details_dialog.h  scroll_bar_fade.cpp  scroll_bar_fade.h  search_widget.cpp  search_widget.h  settings_widget.cpp  settings_widget.h  updates_widget.cpp  updates_widget.h  user_page_widget.cpp  user_page_widget.h
pear-appstore/src/utils/: app_cache.cpp  app_cache.h  cache_helper.cpp  cache_helper.h  types.h
pear-calamares-config/: Makefile  PKGBUILD
pear-notch/: CMakeLists.txt  PKGBUILD  README.md  build.sh  main.cpp  pear-notch.install  pearos-notch.desktop
pear-temp-fix/: PKGBUILD  pear-temp-fix.install
pearos-about/: Makefile  PKGBUILD  build.sh
pearos-about/pearos-about/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  index.html  launch.sh  main.cpp  main.js  package-lock.json  package.json  script.js
pearos-appmenu/: CMakeLists.txt  Makefile  PKGBUILD  appmenuapplet.cpp  appmenuapplet.h
pearos-appmenu/libdbusmenuqt/: CMakeLists.txt
pearos-appmenu/qml/: MenuDelegate.qml  configGeneral.qml  main.qml
pearos-bootsound/: Makefile  PKGBUILD  pearos-bootsound.install
pearos-calculator/: MainWindow.cpp  PKGBUILD  build.sh  settings.json
pearos-calculator/src/pear-calculator-26.0/: .gitignore  CMakeLists.txt  CalculatorWidget.cpp  CalculatorWidget.h  MainWindow.h  PKGBUILD  main.cpp
pearos-calendar/: CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md  build.sh
pearos-calendar/assets/: pearos-calendar.desktop  sidebar_icons.qrc
pearos-calendar/pearID/: token_storage.sh
pearos-calendar/src/: main.cpp
pearos-calendar/src/gui/: mainwindow.cpp  mainwindow.h
pearos-contacts/: CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md  TODO.md  build.sh  index.html  stylesheet.qss
pearos-dock/: Makefile  PKGBUILD
pearos-grub-theme/: Makefile  PKGBUILD
pearos-icons/: Makefile  PKGBUILD
pearos-keyring/: Makefile  PKGBUILD  pearos-keyring.install  pearos-trusted  pearos.gpg
pearos-livecd-desktop/: Makefile  PKGBUILD
pearos-minimize-anim/: Makefile
pearos-muternvf/: Makefile  PKGBUILD
pearos-notch/: CMakeLists.txt  Makefile  PKGBUILD  README.md  build.sh  main.cpp  pearos-notch.desktop
pearos-notch/src/: Config.cpp  Config.h  MprisWatcher.cpp  MprisWatcher.h  NotchWindow.cpp  NotchWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  resources.qrc
pearos-notes/: CMakeLists.txt  PKGBUILD  style.css
pearos-settings/: Makefile  PKGBUILD  cleanup.sh
pearos-settings-app/: CMakeLists.txt  Makefile  PKGBUILD  hide-systemsettings.menu  launch.sh  main.cpp  pearos-systemsettings.desktop  system-settings.install
pearos-settings-app/port/: CMakeLists.txt  main.cpp
pearos-settings-app/port/backend/: appearancemanager.cpp  appearancemanager.h  audiomanager.cpp  audiomanager.h  batterymanager.cpp  batterymanager.h  bluetoothmanager.h  datetimemanager.cpp  datetimemanager.h  displaymanager.cpp  displaymanager.h  dockmanager.cpp  keyboardmanager.cpp  keyboardmanager.h  networkmanager.cpp  networkmanager.h  pearidmanager.cpp  pearidmanager.h  privacymanager.h  systeminfo.cpp  systeminfo.h  touchidmanager.cpp  trackpadmanager.cpp  trackpadmanager.h  updatemanager.cpp  updatemanager.h  usermanager.cpp  usermanager.h  wallpapermanager.cpp  wallpapermanager.h
pearos-settings-app/port/example/: LICENSE  build.sh  index.html
pearos-settings-app/port/example/src/gui/: mainwindow.cpp  todo_widget.h
pearos-settings-app/port/example/src/utils/: logger.h  types.h
pearos-settings-app/port/qml/: Main.qml
pearos-settings-app/port/qml/components/: SettingsToggle.qml  SidebarItem.qml  Theme.qml  TitleBar.qml
pearos-settings-app/port/qml/pages/: AboutPage.qml  AppearancePage.qml  BluetoothPage.qml  DateTimePage.qml  DesktopDockPage.qml  DisplaysPage.qml  GeneralPage.qml  KeyboardPage.qml  LockScreenPage.qml  NetworkPage.qml  SoundPage.qml  StoragePage.qml  TouchIDPage.qml  TrackpadPage.qml  UsersPage.qml  WallpaperPage.qml  WiFiPage.qml
pearos-todo/: CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md  build.sh  index.html
pearos-zshconfig/: .zshrc  Makefile  PKGBUILD
plasma-welcome/: CMakeLists.txt  LICENSE  Makefile  PKGBUILD  build.sh  main.py  pearos-welcome.spec  plasma-welcome-26.02.05-1-x86_64.pkg.tar.zst  requirements.txt  run.py  updater.sh  welcome.cpp
plasma-welcome/src/plasma-welcome/: CMakeLists.txt  Makefile  PKGBUILD  build.sh  welcome.cpp
plasma-workspace-components/: PKGBUILD
slimc0re-settings/: PKGBUILD
soda-filer/: PKGBUILD  fastfetch-config.jsonc  filer-desktop-autostart.desktop  filer.desktop  filer.portal  kde-portals.conf
system-overview/: Makefile  PKGBUILD  license.txt  system-overview-1.0.0.tar.bz2  system-overview-1.0.tar.bz2
system-update/: PKGBUILD
theme-switcher/: Makefile  PKGBUILD  theme-switcher-bin.install
touchegg/: Makefile
(+234 files in other folders)
